# project-nrf-thread-switch

./: .gitignore  Dockerfile  README.md  docker-compose.device.yml  docker-compose.yml  west.yml
app/: CMakeLists.txt  Kconfig  app_version.h.in  debug.conf  dns.conf  mqtt.conf  prj.conf  thread-med.conf  thread-sed.conf
app/boards/: nrf52840dongle_nrf52840.conf  nrf54l15dk_nrf54l15_cpuapp_soc1.overlay  pink_panda.conf  pink_panda.overlay
app/configuration/nrf52840dongle_nrf52840/: buttons_def.h
app/configuration/nrf54l15dk_nrf54l15_cpuapp/: buttons_def.h
app/configuration/pink_panda/: buttons_def.h
app/src/: dns_resolve.c  dns_resolve.h  ha.c  ha.h  init.c  init.h  main.c  mqtt.c  mqtt.h  openthread.c  openthread.h  reset.c  reset.h  uid.c  uid.h
